# skel-cxx

./: .clang-tidy  CMakeLists.txt  hello.cpp  readme.md
